--- a/dev-workflow-ui/webContent/view/cleanup.xhtml
+++ b/dev-workflow-ui/webContent/view/cleanup.xhtml
@@ -9,20 +9,20 @@
       <f:event type="preRenderView" listener="#{loginBean.redirectIfNotAdmin}" />
 
       <div class="card">
-        <h4 class="m-0">Cleanup</h4>
+        <h4 class="m-0">#{ivy.cm.co('/sidebar/cleanup')}</h4>
+        <br />
         <h:form id="clanupForm">
           <p:growl id="growl" showDetail="true" />
-          <p>When you click through different processes you create different types of data like cases, tasks etc.
-            Here you can clean that data to reset your designer.</p>
+          <p>#{ivy.cm.co('/cleanup/introduction')}</p>
           <p:panelGrid columns="1" layout="flex">
             <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupBean.casesTasksAndDependent}"
-              itemLabel="All Cases, Tasks and dependent objects" />
+              itemLabel="#{ivy.cm.co('/cleanup/workflow')}" />
             <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupBean.businessDataAndSearchIndex}"
-              itemLabel="All Business Data and the search index" />
+              itemLabel="#{ivy.cm.co('/cleanup/businessData')}" />
             <p:selectBooleanCheckbox id="identityProviderTokenCheckbox"
-              value="#{cleanupBean.identityProviderTokens}" itemLabel="All identity provider tokens" />
-            <p:selectBooleanCheckbox id="dataCaches" value="#{cleanupBean.dataCaches}" itemLabel="Data caches" />
-            <p:commandButton id="cleanupBtn" value="Cleanup" icon="si si-recycling-trash-bin-2 "
+              value="#{cleanupBean.identityProviderTokens}" itemLabel="#{ivy.cm.co('/cleanup/tokens')}" />
+            <p:selectBooleanCheckbox id="dataCaches" value="#{cleanupBean.dataCaches}" itemLabel="#{ivy.cm.co('/cleanup/dataCaches')}" />
+            <p:commandButton id="cleanupBtn" value="#{ivy.cm.co('/sidebar/cleanup')}" icon="si si-recycling-trash-bin-2 "
               actionListener="#{cleanupBean.cleanup}" update="growl"
               disabled="#{!permissionsBean.devModeAndAdmin}" />
           </p:panelGrid>
