--- a/dev-workflow-ui/webContent/view/notes-dialog.xhtml
+++ b/dev-workflow-ui/webContent/view/notes-dialog.xhtml
@@ -6,7 +6,7 @@
   <f:attribute name="primefaces.THEME" value="#{ivyFreyaTheme.theme}" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Notes</title>
+  <title>#{ivy.cm.co('/common/notes')}</title>
   <link rel="shortcut icon" href="#{resource['ivy-branding:favicon']}" />
   <h:outputScript name="js/layout.js" library="#{ivyFreyaTheme.library}" />
   <h:outputStylesheet name="#{ivyFreyaTheme.layout}" library="#{ivyFreyaTheme.library}" />
