--- a/dev-workflow-ui/webContent/view/user.xhtml
+++ b/dev-workflow-ui/webContent/view/user.xhtml
@@ -23,7 +23,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-common-file-text"></i>
-                  <h6 class="m-0">Description</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/common/description')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-information.xhtml" />
@@ -34,7 +34,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-multiple-neutral-1"></i>
-                  <h6 class="m-0">Roles</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/common/roles')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-roles.xhtml" />
@@ -45,7 +45,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-layout-bullets"></i>
-                  <h6 class="m-0">Open Tasks</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/common/openTasks')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-usertasks.xhtml" />
@@ -56,7 +56,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-information-circle"></i>
-                  <h6 class="m-0">Started Cases</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/common/startedCases')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-usercases.xhtml" />
