--- a/dev-workflow-ui/webContent/includes/components/signals/sendSignal.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/signals/sendSignal.xhtml
@@ -6,15 +6,15 @@
   <h:panelGroup styleClass="ui-float-label">
     <p:autoComplete id="signalCodeInput" dropdown="true" value="#{signalsBean.code}"
       completeMethod="#{signalsBean.signalsComplete}" styleClass="width-100 signal-code-input" />
-    <p:outputLabel value="Signal Code" for="@previous" />
+    <p:outputLabel value="#{ivy.cm.co('/signals/signalCode')}" for="@previous" />
   </h:panelGroup>
 
   <h:panelGroup styleClass="ui-float-label mt-2">
     <p:inputText id="signalPayloadInput" value="#{signalsBean.payload}" styleClass="width-100" />
-    <p:outputLabel value="Payload" for="@previous" />
+    <p:outputLabel value="#{ivy.cm.co('/signals/payload')}" for="@previous" />
   </h:panelGroup>
 
   <p:commandButton id="signalBtn" update="@form, boundarySignalsTable, firedSignalsTable"
-    styleClass="mt-2 send-signal-button" value="Send" actionListener="#{signalsBean.sendSignal}"
+    styleClass="mt-2 send-signal-button" value="#{ivy.cm.co('/signals/send')}" actionListener="#{signalsBean.sendSignal}"
     disabled="#{!permissionsBean.demoDevModeOrAdmin}" icon="si si-send-email"/>
 </ui:composition>
