--- a/dev-workflow-ui/webContent/includes/components/statistics/caseStateGraph.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/caseStateGraph.xhtml
@@ -5,13 +5,13 @@
 <h:body>
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
-      <h4>Cases by state</h4>
+      <h4>#{ivy.cm.co('/statistics/casesByState')}</h4>
       <p:donutChart model="#{statisticsBean.caseByStateGraph}" style="align-self: center; height: 18rem; width: 18rem;"
         rendered="#{statisticsBean.caseByStateGraph != null}" />
       <h:panelGroup layout="block" rendered="#{statisticsBean.caseByStateGraph == null}"
         styleClass="h-full flex flex-column align-items-center justify-content-center">
         <i class="pi pi-chart-pie text-7xl mb-4" />
-        <h:outputText value="No enough data available" />
+        <h:outputText value="#{ivy.cm.co('/statistics/notEnoughData')}" />
       </h:panelGroup>
     </ui:define>
   </ui:composition>
