--- a/dev-workflow-ui/webContent/includes/components/statistics/caseStatisticsChart.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/caseStatisticsChart.xhtml
@@ -5,7 +5,7 @@
 <h:body>
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
-      <h4>Cases statistics</h4>
+      <h4>#{ivy.cm.co('/statistics/casesStatistics')}</h4>
       <p:lineChart id="caseStatisticsChart" model="#{statisticsBean.casesPerDayChart}" style="max-height: 20rem"/>
     </ui:define>
   </ui:composition>
