--- a/dev-workflow-ui/webContent/includes/components/statistics/taskStateGraph.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/taskStateGraph.xhtml
@@ -5,13 +5,13 @@
 <h:body>
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
-      <h4>Tasks by state</h4>
+      <h4>#{ivy.cm.co('/statistics/tasksByState')}</h4>
       <p:donutChart model="#{statisticsBean.taskByStateGraph}" rendered="#{statisticsBean.taskByStateGraph != null}"
         style="align-self: center; height: 18rem; width: 18rem;" />
       <h:panelGroup layout="block" rendered="#{statisticsBean.taskByStateGraph == null}"
         styleClass="h-full flex flex-column align-items-center justify-content-center">
         <i class="pi pi-chart-pie text-7xl mb-4" />
-        <h:outputText value="No enough data available" />
+        <h:outputText value="#{ivy.cm.co('/statistics/notEnoughData')}" />
       </h:panelGroup>
     </ui:define>
   </ui:composition>
