--- a/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usercases.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usercases.xhtml
@@ -6,24 +6,24 @@
 
   <h:form id="userDetailCasesForm">
      <p:dataTable id="cases" var="case" value="#{userDetailBean.userCasesDataModel}" widgetVar="casesTable"
-        styleClass="ui-fluid" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom" rows="10"
+        styleClass="ui-fluid" emptyMessage="#{ivy.cm.co('/common/noCasesFound')}" paginatorPosition="bottom" rows="10"
         lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
         <p:ajax event="rowSelect" listener="#{userDetailBean.redirectToCaseRow}" />
-        <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}" width="90px" resizable="false">
+        <p:column headerText="#{ivy.cm.co('/common/state')}" filterBy="#{case.businessState}" sortBy="#{case.businessState}" width="90px" resizable="false">
           <jc:stateBadge id="caseState" data="#{case}" />
         </p:column>
-        <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.name}" responsivePriority="1">
+        <p:column headerText="#{ivy.cm.co('/common/name')}" filterBy="#{case.getName(case)}" sortBy="#{case.name}" responsivePriority="1">
           <h:outputText id="caseName" value="#{case.name}" />
         </p:column>
-        <p:column headerText="Creator" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}"
+        <p:column headerText="#{ivy.cm.co('/common/creator')}" filterBy="#{case.creatorUserName}" sortBy="#{case.creatorUserName}"
           responsivePriority="3" width="160">
           <jc:user user="#{case.creatorUser}" />
         </p:column>
-        <p:column headerText="Start" sortBy="#{case.startTimestamp}" sortOrder="descending" responsivePriority="3"
+        <p:column headerText="#{ivy.cm.co('/common/start')}" sortBy="#{case.startTimestamp}" sortOrder="descending" responsivePriority="3"
           width="90">
           <jc:time id="startTime" datetime="#{case.startTimestamp}" />
         </p:column>
-        <p:column headerText="End" sortBy="#{case.endTimestamp}" responsivePriority="4" width="90">
+        <p:column headerText="#{ivy.cm.co('/common/end')}" sortBy="#{case.endTimestamp}" responsivePriority="4" width="90">
           <jc:time id="endTime" datetime="#{case.endTimestamp}" />
         </p:column>
         <p:column width="30px" resizable="false">
@@ -31,7 +31,7 @@
             styleClass="ui-button-flat text-color action-button" />
           <p:menu id="caseActionsMenu" overlay="true" trigger="caseActionsBtn" my="right top" at="right bottom"
             style="width: 200px">
-            <p:menuitem id="openCaseDetailsBtn" value="Open case details" url="#{case.detailLink}"
+            <p:menuitem id="openCaseDetailsBtn" value="#{ivy.cm.co('/common/openDetails')}" url="#{case.detailLink}"
               icon="si si-information-circle" />
           </p:menu>
         </p:column>
