--- a/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
@@ -6,10 +6,10 @@
 
   <h:form id="userDetailTasksForm">
       <p:dataTable id="tasks" var="task" value="#{userDetailBean.tasksDataModel}" widgetVar="tasksTable"
-        styleClass="ui-fluid" emptyMessage="No Tasks found with given criteria" paginatorPosition="bottom" rows="10"
+        styleClass="ui-fluid" emptyMessage="#{ivy.cm.co('/common/noTasksFound')}" paginatorPosition="bottom" rows="10"
         lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
         <p:ajax event="rowSelect" listener="#{userDetailBean.displayTaskRow}" />
-        <p:column headerText="State" filterBy="#{task.businessState}" sortBy="#{task.businessState}" width="90px" styleClass="center-table-cell" resizable="false">
+        <p:column headerText="#{ivy.cm.co('/common/state')}" filterBy="#{task.businessState}" sortBy="#{task.businessState}" width="90px" styleClass="center-table-cell" resizable="false">
           <jc:stateBadge id="taskState" data="#{task}"/>
         </p:column>
         <p:column headerText="Prio" id="priority" filterBy="#{task.priority}" styleClass="center-table-cell"
@@ -17,19 +17,19 @@
           <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
           <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
         </p:column>
-        <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
+        <p:column headerText="#{ivy.cm.co('/common/name')}" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
           <h:outputText id="taskName" value="#{task.name}" />
         </p:column>
-        <p:column headerText="Responsible" width="160px" responsivePriority="3">
+        <p:column headerText="#{ivy.cm.co('/common/responsible')}" width="160px" responsivePriority="3">
           <ui:repeat id="taskResponsibles" value="#{task.responsibles}" var="responsible">
             <jc:user id="taskResponsible" user="#{responsible}" />
           </ui:repeat>
         </p:column>
-        <p:column headerText="Start" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
+        <p:column headerText="#{ivy.cm.co('/common/start')}" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
           width="100px">
           <jc:time id="startTime" datetime="#{task.startTimestamp}" />
         </p:column>
-        <p:column headerText="End" sortBy="#{task.endTimestamp}" responsivePriority="4" width="100px">
+        <p:column headerText="#{ivy.cm.co('/common/end')}" sortBy="#{task.endTimestamp}" responsivePriority="4" width="100px">
           <jc:time id="endTime" datetime="#{task.endTimestamp}" />
         </p:column>
         <p:column responsivePriority="2" width="30px" resizable="false">
@@ -37,9 +37,9 @@
             styleClass="ui-button-flat text-color action-button" />
           <p:menu id="taskActionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom"
             style="width: 200px">
-            <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
+            <p:menuitem id="openTaskDetailsBtn" value="#{ivy.cm.co('/common/openDetails')}" url="#{task.detailUrl}"
               icon="si si-information-circle" />
-            <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}"
+            <p:menuitem value="#{ivy.cm.co('/common/startTask')}" actionListener="#{homepageBean.executeTask(task)}"
               id="startTaskBtn" icon="si si-controls-play" disabled="#{!task.canBeStarted()}"/>
           </p:menu>
         </p:column>
