--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -66,25 +66,25 @@
                 <li>
                   <p:link id="profileBtn" outcome="profile.xhtml" rendered="#{loginBean.loggedIn}">
                     <i class="si si-lg si-single-neutral-circle"></i>
-                    <span>Profile</span>
+                    <span>#{ivy.cm.co('/template/profile')}</span>
                   </p:link>
                 </li>
                 <li jsf:rendered="#{permissionsBean.demoOrDevMode}">
-                  <p:link id="loginTableBtn" href="loginTable.xhtml?originalUrl=#{loginBean.originalPage}">
+                  <p:link id="loginTableBtn" href="switch-user.xhtml?originalUrl=#{loginBean.originalPage}">
                     <i class="si si-lg si-multiple-neutral-1"></i>
-                    <span>Switch user</span>
+                    <span>#{ivy.cm.co('/template/switchUser')}</span>
                   </p:link>
                 </li>
                 <li>
                   <p:link id="loginFormBtn" href="login.xhtml?originalUrl=#{loginBean.originalPage}">
                     <i class="si si-lg si-login-3"></i>
-                    <span>Login</span>
+                    <span>#{ivy.cm.co('/template/login')}</span>
                   </p:link>
                 </li>
                 <li>
                   <p:commandLink id="sessionLogoutBtn" actionListener="#{loginBean.logout}"
                     rendered="#{!userBean.sessionUserUnknown}">
-                    <i class="si si-lg si-logout-1"></i><span>Logout</span>
+                    <i class="si si-lg si-logout-1"></i><span>#{ivy.cm.co('/template/logout')}</span>
                   </p:commandLink>
                 </li>
               </ul>
