--- a/dev-workflow-ui/webContent/resources/components/workflowEventsTable.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/workflowEventsTable.xhtml
@@ -10,34 +10,36 @@
 <cc:implementation>
   <h:panelGroup id="workflowEvents" rendered="#{permissionsBean.hasWorkflowEventReadPermission()}">
     <p:dataTable id="eventsTable" var="event" value="#{cc.attrs.workflowEvents}" widgetVar="eventsTable"
-      emptyMessage="No Events found with given criteria" reflow="true" rows="5" paginator="true"
+      emptyMessage="#{ivy.cm.co('/common/noEventsFound')}" reflow="true" rows="5" paginator="true"
       paginatorAlwaysVisible="false" paginatorPosition="bottom"
       paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
 
-      <p:column headerText="Creation Date" sortBy="#{event.eventTimestamp}" sortOrder="descending" width="120">
+      <p:column headerText="#{ivy.cm.co('/common/creationDate')}" sortBy="#{event.eventTimestamp}" sortOrder="descending" width="120">
         <h:outputText value="#{dateTimeBean.getDefault(event.eventTimestamp)}" />
       </p:column>
 
-      <p:column headerText="Event type" colspan="2">
+      <p:column headerText="#{ivy.cm.co('/common/type')}" colspan="2">
         <h:outputText value="#{event.eventType}" id="eventType" />
       </p:column>
 
-      <p:column headerText="State" sortBy="#{event.taskState}" width="120">
-        <h:outputText value="#{event.taskState}" id="eventState" />
+      <p:column headerText="#{ivy.cm.co('/common/state')}" sortBy="#{event.taskState}" width="120">
+        <h:panelGroup rendered="#{event.taskState != null}">
+          <jc:stateBadge id="eventState" data="#{event.taskState}" />
+        </h:panelGroup>
       </p:column>
 
-      <p:column headerText="Author" sortBy="#{event.author.displayName}" width="160">
+      <p:column headerText="#{ivy.cm.co('/common/author')}" sortBy="#{event.author.displayName}" width="160">
         <jc:user user="#{event.author}" id="eventAuthor" />
       </p:column>
 
-      <p:column headerText="Content">
+      <p:column headerText="#{ivy.cm.co('/common/content')}">
         <h:outputText value="#{event.additionalInfo}" id="eventInfo" />
       </p:column>
     </p:dataTable>
   </h:panelGroup>
 
   <p:staticMessage id="noPermissionMessage" severity="warn" rendered="#{!permissionsBean.hasWorkflowEventReadPermission()}"
-   summary="No permissions" detail="You need Workflow Events read permission in order to see them."/>
+   summary="#{ivy.cm.co('/workflowEventsTable/noPermissions')}" detail="#{ivy.cm.co('/workflowEventsTable/needPermission')}"/>
 
 </cc:implementation>
 </html>
