--- a/dev-workflow-ui/webContent/view/case.xhtml
+++ b/dev-workflow-ui/webContent/view/case.xhtml
@@ -18,7 +18,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-common-file-text"></i>
-                  <h6 class="m-0">Description</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/description')}</h6>
                 </div>
                 <div>
                   <p:commandButton icon="si si-button-refresh-arrow" styleClass="ui-button-secondary rounded-button"
@@ -29,28 +29,30 @@
                       disabled="#{0 >= casesDetailsBean.selectedCase.notes.size()}" icon="si si-notes-quill"
                       actionListener="#{notesBean.openNotesDialog(casesDetailsBean.selectedCaseId)}" />
                   </p:badge>
-                  <p:tooltip for="caseNotesBtn" value="Show case notes" position="top" />
+                  <p:tooltip for="caseNotesBtn" value="#{ivy.cm.co('/case/showNotes')}" position="top" />
                   <p:commandButton icon="si si-delete-1" styleClass="ui-button-danger rounded-button ml-2"
                     disabled="#{not casesDetailsBean.canBeDestoryed()}" id="caseDestroyBtn"
                     actionListener="#{casesDetailsBean.selectedCase.destroy}"
                     update="@this, caseDetails, caseHierarchy" />
-                  <p:tooltip for="caseDestroyBtn" value="Destroy case" position="top" />
+                  <p:tooltip for="caseDestroyBtn" value="#{ivy.cm.co('/case/destroyCase')}" position="top" />
                 </div>
               </div>
               <ui:include src="/includes/components/caseDetails/description.xhtml" />
             </div>
           </div>
 
+          <jc:processViewer id="processViewer" title="#{casesDetailsBean.viewerDialogTitle}" link="#{casesDetailsBean.viewerLink}" />
+
           <h:panelGroup styleClass="col-12 lg:col-4" layout="block" rendered="#{casesDetailsBean.caseMap}">
             <div class="card casemap-card flex flex-column">
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-information-circle"></i>
-                  <h6 class="m-0">Case Map</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/caseMap')}</h6>
                 </div>
                 <div class="flex">
                   <h:panelGroup layout="block" rendered="#{not empty casesDetailsBean.sidesteps}">
-                    <p:commandButton value="Sidesteps" icon="si si-arrow-down-1" id="sidestepsBtn" styleClass="mr-1" />
+                    <p:commandButton value="#{ivy.cm.co('/case/sidesteps')}" icon="si si-arrow-down-1" id="sidestepsBtn" styleClass="mr-1" />
                     <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
                       model="#{casesDetailsBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
                   </h:panelGroup>
@@ -58,7 +60,7 @@
                     styleClass="flex align-items-center">
                     <i class="si si-information-circle detail-btn" />
                   </p:link>
-                  <p:tooltip for="openCaseMapUiViewerBtn" position="top" value="Open Case Map Viewer" />
+                  <p:tooltip for="openCaseMapUiViewerBtn" position="top" value="#{ivy.cm.co('/case/openCaseMap')}" />
                 </div>
               </div>
               <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
@@ -70,17 +72,17 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-information-circle"></i>
-                  <h6 class="m-0">Process Viewer</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/processViewer')}</h6>
                 </div>
                 <p:link rendered="#{casesDetailsBean.viewerAllowed}" href="#" id="openProcessViewerBtn"
                   onclick="PF('process-viewer-dlg').show()" styleClass="flex align-items-center">
                   <i class="si si-information-circle detail-btn" />
                 </p:link>
                 <p:tooltip rendered="#{casesDetailsBean.viewerAllowed}" for="openProcessViewerBtn"
-                  position="top" value="Open Process Viewer" />
+                  position="top" value="#{ivy.cm.co('/case/openProcessViewer')}" />
               </div>
               <div class="height-100 flex justify-content-center align-items-center">
-                <div jsf:rendered="#{!casesDetailsBean.viewerAllowed}">Current Process is hidden</div>
+                <div jsf:rendered="#{!casesDetailsBean.viewerAllowed}">#{ivy.cm.co('/case/currentProcessHidden')}</div>
                 <iframe jsf:rendered="#{casesDetailsBean.viewerAllowed}" id="processViewerFrame"
                   class="process-viewer-preview" src="#{casesDetailsBean.processPreviewLink}" />
               </div>
@@ -93,10 +95,10 @@
                 <div class="card-header">
                   <div class="card-title flex align-items-center">
                     <i class="pr-3 si si-layout-bullets"></i>
-                    <h6 class="m-0">Task list</h6>
+                    <h6 class="m-0">#{ivy.cm.co('/case/taskList')}</h6>
                   </div>
                   <h:panelGroup id="switchContainer" styleClass="inline-flex align-items-center">
-                    <h:outputText value="Show system tasks" class="mr-2" />
+                    <h:outputText value="#{ivy.cm.co('/case/showSystemTasks')}" class="mr-2" />
                     <p:toggleSwitch id="showSystemTasksSwitch" value="#{casesDetailsBean.showSystemTasks}">
                       <p:ajax update="tasksForm:tasks" />
                     </p:toggleSwitch>
@@ -112,7 +114,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-task-list-approve"></i>
-                  <h6 class="m-0">Case hierarchy</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/caseHierarchy')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
@@ -124,7 +126,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-cog"></i>
-                  <h6 class="m-0">Custom fields</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/common/customFields')}</h6>
                 </div>
               </div>
               <jc:customFields id="customFields" customFields="#{casesDetailsBean.customFields}" />
@@ -136,7 +138,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-office-file-doc-1"></i>
-                  <h6 class="m-0">Documents</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/documents')}</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/caseDetails/documents.xhtml" />
@@ -148,7 +150,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-synchronize-arrow-clock"></i>
-                  <h6 class="m-0">Workflow Events</h6>
+                  <h6 class="m-0">#{ivy.cm.co('/case/workflowEvents')}</h6>
                 </div>
               </div>
               <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{casesDetailsBean.workflowEvents}" />
@@ -156,9 +158,6 @@
           </div>
         </div>
       </div>
-
-      <jc:processViewer id="processViewer" title="#{casesDetailsBean.viewerDialogTitle}"
-        link="#{casesDetailsBean.viewerLink}" />
     </ui:define>
   </ui:composition>
 </h:body>
