--- a/dev-workflow-ui/webContent/view/end.xhtml
+++ b/dev-workflow-ui/webContent/view/end.xhtml
@@ -9,9 +9,9 @@
       <div class="card">
         <div class="flex align-items-center mb-3">
           <i class="pr-3 si si-check-circle-1 card-title-icon"></i>
-          <h2 class="m-0">Task End</h2>
+          <h2 class="m-0">#{ivy.cm.co('/common/taskEnd')}</h2>
         </div>
-        <p>You have successfully finished the task.</p>
+        <p>#{ivy.cm.co('/common/taskFinished')}</p>
       </div>
     </ui:define>
   </ui:composition>
