--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -27,17 +27,17 @@
         </div>
 
         <p:focus for="userName" />
-        <p:inputText id="userName" autocomplete="off" value="#{loginBean.username}" required="true" placeholder="Username / Email" />
-        <p:password id="password" autocomplete="off" value="#{loginBean.password}" required="true" placeholder="Password" />
+        <p:inputText id="userName" autocomplete="off" value="#{loginBean.username}" required="true" placeholder="#{ivy.cm.co('/login/username')}" />
+        <p:password id="password" autocomplete="off" value="#{loginBean.password}" required="true" placeholder="#{ivy.cm.co('/login/password')}" />
 
-        <p:commandButton update="@form" id="login" actionListener="#{loginBean.customLogin}" value="Sign In" icon="si si-login-3" ajax="false"/>
+        <p:commandButton update="@form" id="login" actionListener="#{loginBean.customLogin}" value="#{ivy.cm.co('/login/signIn')}" icon="si si-login-3" ajax="false"/>
         <p:messages globalOnly="true" id="loginMessage" />
 
         <h:panelGroup rendered="#{loginBean.OAuthProvider != null}" styleClass="oauth-providers">
           <h:outputLink value="#{loginBean.OAuthProvider.link}">
             <h:outputText value="#{loginBean.OAuthProvider.image}" escape="false" />
             <span style="position: relative; bottom: 5px;">
-              Log in with <h:outputText value="#{loginBean.OAuthProvider.displayName}" />
+              #{ivy.cm.co('/login/logInWith')} <h:outputText value="#{loginBean.OAuthProvider.displayName}" />
             </span>
           </h:outputLink>
         </h:panelGroup>
