--- a/dev-workflow-ui/webContent/view/switch-user.xhtml
+++ b/dev-workflow-ui/webContent/view/switch-user.xhtml
@@ -12,13 +12,13 @@
       <f:event type="preRenderView" listener="#{loginBean.redirectIfNotDevMode}" />
 
       <h:panelGroup layout="block" styleClass="static-message" rendered="#{!loginBean.loggedIn}">
-        <p:staticMessage severity="warn" summary="Warning" detail="You need to login to access that page"
+        <p:staticMessage severity="warn" summary="Warning" detail="#{ivy.cm.co('/switchUser/needLogin')}"
           id="loginMessage" />
       </h:panelGroup>
       <h:form id="loginTable">
         <div class="card ui-fluid">
-          <p:dataTable id="users" var="user" value="#{loginTableBean.users}" widgetVar="usersTable"
-            emptyMessage="No users found with given criteria" selection="#{loginTableBean.currentUser}"
+          <p:dataTable id="users" var="user" value="#{switchUserBean.users}" widgetVar="usersTable"
+            emptyMessage="#{ivy.cm.co('/switchUser/noUsers')}" selection="#{switchUserBean.currentUser}"
             selectionMode="single" rowKey="#{user.fullname}">
             <p:ajax event="rowSelect" listener="#{loginBean.loginFromTable}" />
             <f:facet name="header">
@@ -26,24 +26,24 @@
                 <h4 class="m-0">Login</h4>
                 <div class="ui-input-icon-left filter-container">
                   <i class="pi pi-search" />
-                  <p:inputText id="globalFilter" placeholder="Search" value="#{loginTableBean.globalFilter}"
+                  <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{switchUserBean.globalFilter}"
                     onkeyup="PF('usersTable').filter()" />
                 </div>
               </div>
-              <p>Click user to login</p>
+              <p>#{ivy.cm.co('/switchUser/clickLogin')}</p>
             </f:facet>
 
-            <p:column headerText="Username" filterBy="#{user.name}" sortBy="#{user.name}" sortOrder="ascending">
+            <p:column headerText="#{ivy.cm.co('/common/username')}" filterBy="#{user.name}" sortBy="#{user.name}" sortOrder="ascending">
               <h:outputText value="#{user.name}">
                 <i class="si si-single-neutral-actions mr-1"></i>
               </h:outputText>
             </p:column>
 
-            <p:column headerText="Fullname" filterBy="#{user.fullname}" sortBy="#{user.fullname}">
+            <p:column headerText="#{ivy.cm.co('/common/fullname')}" filterBy="#{user.fullname}" sortBy="#{user.fullname}">
               <h:outputText value="#{user.fullname}" />
             </p:column>
 
-            <p:column headerText="Roles" filterBy="#{user.roles}" sortBy="#{user.roles}" filterStyle="display: none"
+            <p:column headerText="#{ivy.cm.co('/common/roles')}" filterBy="#{user.roles}" sortBy="#{user.roles}" filterStyle="display: none"
               colspan="2">
               <h:outputText value="#{user.roles}" />
             </p:column>
