--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -9,15 +9,15 @@
       <h:form id="tasksForm">
         <div class="card">
           <p:dataTable id="tasks" var="task" value="#{tasksBean.tasksDataModel}" widgetVar="tasksTable"
-            styleClass="ui-fluid" emptyMessage="No Tasks found with given criteria" paginatorPosition="bottom" rows="10"
+            styleClass="ui-fluid" emptyMessage="#{ivy.cm.co('/tasks/noTasksFound')}" paginatorPosition="bottom" rows="10"
             lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
             <p:ajax event="rowSelect" listener="#{tasksBean.displayTaskRow}" />
             <f:facet name="header">
               <div class="flex justify-content-between mb-3 pretty-search">
-                <h4 class="m-0">Tasks</h4>
+                <h4 class="m-0">#{ivy.cm.co('/sidebar/tasks')}</h4>
                 <h:panelGroup id="showAllTasksSwitch_container" styleClass="ml-auto inline-flex align-items-center"
                   layout="block" rendered="#{permissionsBean.admin}">
-                  <h:outputText value="Show all" styleClass="mr-2" />
+                  <h:outputText value="#{ivy.cm.co('/common/showAll')}" styleClass="mr-2" />
                   <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksBean.tasksDataModel.showAll}"
                     disabled="#{!permissionsBean.admin}">
                     <p:ajax update="tasksForm" />
@@ -27,27 +27,27 @@
                   value="If enabled shows all tasks, even the ones the user is not involved in" />
                 <div class="ui-input-icon-left filter-container ml-3">
                   <i class="pi pi-search" />
-                  <p:inputText id="globalFilter" placeholder="Search" value="#{tasksBean.tasksDataModel.filter}"
+                  <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{tasksBean.tasksDataModel.filter}"
                     onkeyup="PF('tasksTable').filter()" />
                 </div>
               </div>
             </f:facet>
 
-            <p:column headerText="State" filterBy="#{task.businessState}" sortBy="#{task.businessState}" width="90px" styleClass="center-table-cell" resizable="false">
+            <p:column headerText="#{ivy.cm.co('/common/state')}" filterBy="#{task.businessState}" sortBy="#{task.businessState}" width="90px" styleClass="center-table-cell" resizable="false">
               <jc:stateBadge id="taskState" data="#{task}"/>
             </p:column>
 
-            <p:column headerText="Prio" id="priority" filterBy="#{task.priority}" styleClass="center-table-cell"
+            <p:column headerText="#{ivy.cm.co('/common/prio')}" id="priority" filterBy="#{task.priority}" styleClass="center-table-cell"
               sortBy="#{task.priority}" width="45px" resizable="false">
               <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
               <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
             </p:column>
 
-            <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
+            <p:column headerText="#{ivy.cm.co('/common/name')}" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
               <h:outputText id="taskName" value="#{task.name}" />
             </p:column>
 
-            <p:column headerText="Responsible" width="160px" responsivePriority="3">
+            <p:column headerText="#{ivy.cm.co('/common/responsible')}" width="160px" responsivePriority="3">
               <div class="flex">
                 <jc:user id="taskResponsible" user="#{task.firstResponsible}" rendered="#{task.hasResponsibles()}" />
                   <h:panelGroup id="otherResponsibles" styleClass="flex align-items-center" style="margin-left:3px;" rendered="#{task.responsibles.size() gt 1}" >
@@ -63,12 +63,12 @@
               </div>
             </p:column>
 
-            <p:column headerText="Start" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
+            <p:column headerText="#{ivy.cm.co('/common/start')}" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
               width="100px">
               <jc:time id="startTime" datetime="#{task.startTimestamp}" />
             </p:column>
 
-            <p:column headerText="End" sortBy="#{task.endTimestamp}" responsivePriority="4" width="100px">
+            <p:column headerText="#{ivy.cm.co('/common/end')}" sortBy="#{task.endTimestamp}" responsivePriority="4" width="100px">
               <jc:time id="endTime" datetime="#{task.endTimestamp}" />
             </p:column>
 
@@ -77,9 +77,9 @@
                 styleClass="ui-button-flat text-color action-button" />
               <p:menu id="taskActionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom"
                 style="width: 200px">
-                <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
+                <p:menuitem id="openTaskDetailsBtn" value="#{ivy.cm.co('/common/openDetails')}" url="#{task.detailUrl}"
                   icon="si si-information-circle" />
-                <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}"
+                <p:menuitem value="#{ivy.cm.co('/common/startTask')}" actionListener="#{homepageBean.executeTask(task)}"
                   id="startTaskBtn" icon="si si-controls-play" disabled="#{!task.canBeStarted()}"/>
               </p:menu>
             </p:column>
